--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,10 @@ services:
     container_name: app
     build: "."
     ports:
-      - "8080:8080"
+      - "${HTTP_PORT}:${HTTP_PORT}"
     restart: on-failure
+    env_file:
+      - .env
     depends_on:
       - "postgres"
     volumes:
